--- a/app/src/main/res/layout/add_service.xml
+++ b/app/src/main/res/layout/add_service.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/allPages"
-    tools:context=".createService.AddService">
+    tools:context=".createService.AddService"
+    android:background="@color/mainColorBG">
 
     <LinearLayout
         android:id="@+id/headerAddServiceLayout"
@@ -14,137 +14,144 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/scrollViewAddService"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/headerAddServiceLayout"
         app:layout_constraintBottom_toTopOf="@+id/footerAddServiceLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerAddServiceLayout">
 
         <LinearLayout
-            style="@style/block"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/block_text">
-
-            <EditText
-                android:id="@+id/nameAddServiceInput"
-                style="@style/mainText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/nameAddServiceTB"
-                android:inputType="textPersonName|textCapWords" />
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/block"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/block_text">
-
-            <EditText
-                android:id="@+id/costAddServiceInput"
-                style="@style/mainText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/costAddServiceTB"
-                android:inputType="number" />
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/block"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/block_text">
-
-            <EditText
-                android:id="@+id/addressAddServiceInput"
-                style="@style/mainText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Адрес"
-                android:inputType="textPersonName|textCapWords" />
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/block"
-            android:background="@drawable/block_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                style="@style/mainText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:hint="Категория"
-                />
-
-            <Spinner
-                android:id="@+id/categoryAddServiceSpinner"
-                style="@style/mainText"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@color/panelColor"
-                android:entries="@array/category" />
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/block"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/block_text">
-
-            <EditText
-                style="@style/mainText"
-                android:id="@+id/descriptionAddServiceInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:hint="Описание"
-                android:inputType="textMultiLine" />
-        </LinearLayout>
-
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:layout_height="0dp"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/feedAddServiceLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/servicePhotoAddServiceImage"
-                    android:layout_width="wrap_content"
+                style="@style/block"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/block_text">
+
+                <EditText
+                    android:id="@+id/nameAddServiceInput"
+                    style="@style/mainText"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@mipmap/ic_launcher_round"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    android:hint="@string/nameAddServiceTB"
+                    android:inputType="textPersonName|textCapWords" />
             </LinearLayout>
 
-        </HorizontalScrollView>
+            <LinearLayout
+                style="@style/block"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/block_text">
 
-        <Button
-            style="@style/mainButtonOther"
-            android:id="@+id/addServiceAddServiceBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="@string/addServices" />
-    </LinearLayout>
+                <EditText
+                    android:id="@+id/costAddServiceInput"
+                    style="@style/mainText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/costAddServiceTB"
+                    android:inputType="number" />
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/block"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/block_text">
+
+                <EditText
+                    android:id="@+id/addressAddServiceInput"
+                    style="@style/mainText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Адрес"
+                    android:inputType="textPersonName|textCapWords" />
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/block"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/block_text"
+                android:orientation="horizontal">
+
+                <TextView
+                    style="@style/mainText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:hint="Категория" />
+
+                <Spinner
+                    android:id="@+id/categoryAddServiceSpinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:entries="@array/category" />
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/block"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/block_text">
+
+                <EditText
+                    android:id="@+id/descriptionAddServiceInput"
+                    style="@style/mainText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:hint="Описание"
+                    android:inputType="textMultiLine" />
+            </LinearLayout>
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <LinearLayout
+                    android:id="@+id/feedAddServiceLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/servicePhotoAddServiceImage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@mipmap/ic_launcher_round"
+                        tools:srcCompat="@tools:sample/avatars" />
+                </LinearLayout>
+
+            </HorizontalScrollView>
+
+            <Button
+                android:id="@+id/addServiceAddServiceBtn"
+                style="@style/mainButtonOther"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="@string/addServices" />
+        </LinearLayout>
+
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/footerAddServiceLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottom_panel_height"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
