--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/allPages"
+    android:background="@color/mainColorBG"
     tools:context=".other.Profile">
 
     <LinearLayout
@@ -12,124 +12,154 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/mainLayoutProfile"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/footerProfileLayout"
+        app:layout_constraintBottom_toTopOf="@+id/servicesProfileScroll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerProfileLayout">
 
         <!-- Верхняя часть-->
         <LinearLayout
+            style="@style/block"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:background="@drawable/block_text"
-            style="@style/block"
-            >
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="5dp"
-                android:padding="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/block_text"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/avatarProfileImage"
-                    android:layout_width="@dimen/photo_width"
-                    android:layout_height="@dimen/photo_height"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    tools:srcCompat="@tools:sample/avatars" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:id="@+id/ratingLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:background="@color/white">
+                    android:layout_weight="1"
+                    android:background="@drawable/block_text"
+                    android:orientation="vertical"
+                    android:padding="5dp">
 
-                    <!-- Rating bar -->
+                    <ImageView
+                        android:id="@+id/avatarProfileImage"
+                        android:layout_width="@dimen/photo_width"
+                        android:layout_height="@dimen/photo_height"
+                        android:layout_gravity="center"
+                        tools:srcCompat="@tools:sample/avatars" />
+                </LinearLayout>
+                <!-- Rating bar -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/block_text"
+                    android:orientation="vertical"
+                    android:padding="5dp">
+
+                    <TextView
+                        android:id="@+id/nameProfileText"
+                        style="@style/mainTextProfile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/cityProfileText"
+                        style="@style/defaultTextProfile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/phoneProfileText"
+                        style="@style/defaultTextProfile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/subscribersProfileText"
+                        style="@style/defaultTextProfile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:text="TextView" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:padding="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
                     <Button
                         android:id="@+id/ratingProfileBtn"
                         style="@style/smallMainButtonOther"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
-                        android:layout_gravity="bottom"
                         android:text="Оценок еще нет" />
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
-            </LinearLayout>
+                    <Button
+                        android:id="@+id/subscriptionsProfileBtn"
+                        style="@style/smallMainButtonOther"
+                        android:layout_width="wrap_content"
+                        android:layout_height="36dp"
+                        android:text="Подписки" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/block_text"
-                android:orientation="vertical"
-                android:padding="5dp">
-
-                <TextView
-                    android:id="@+id/nameProfileText"
-                    style="@style/mainTextProfile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:text="TextView" />
-
-                <TextView
-                    android:id="@+id/cityProfileText"
-                    style="@style/defaultTextProfile"
-                    android:background="@color/white"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
-
-                <TextView
-                    android:id="@+id/phoneProfileText"
-                    style="@style/defaultTextProfile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:text="TextView" />
-
-                <TextView
-                    android:id="@+id/subscribersProfileText"
-                    style="@style/defaultTextProfile"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:text="TextView" />
-
-                <Button
-                    android:id="@+id/subscriptionsProfileBtn"
-                    style="@style/smallMainButtonOther"
-                    android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:text="Подписки" />
+                </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
 
-        <ScrollView
-            android:id="@+id/servicesProfileScroll"
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/servicesOrOrdersProfileSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:checked="false"
+            android:text="My orders"
+            android:textOff="OFF"
+            android:textOn="ON"
+            app:showText="true" />
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/servicesProfileScroll"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/orderProfileScroll"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mainLayoutProfile">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/servicesProfileLayout"
@@ -137,42 +167,32 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
 
-        </ScrollView>
+            <Button
+                android:id="@+id/addServicesProfileBtn"
+                style="@style/smallMainButtonOther"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:text="@string/addServices" />
+        </LinearLayout>
+    </ScrollView>
 
-        <ScrollView
-            android:id="@+id/orderProfileScroll"
+    <ScrollView
+        android:id="@+id/orderProfileScroll"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/footerProfileLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/servicesProfileScroll">
+
+        <LinearLayout
+            android:id="@+id/ordersProfileLayout"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
-
-            <LinearLayout
-                android:id="@+id/ordersProfileLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
-
-        <Button
-            android:id="@+id/addServicesProfileBtn"
-            style="@style/smallMainButtonOther"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:layout_gravity="center"
-            android:text="@string/addServices" />
-
-        <android.support.v7.widget.SwitchCompat
-            android:id="@+id/servicesOrOrdersProfileSwitch"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center"
-            android:checked="false"
-            android:text="My orders"
-            android:textOff="OFF"
-            android:textOn="ON"
-            app:showText="true" />
-
-    </LinearLayout>
+            android:orientation="vertical" />
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/footerProfileLayout"
