--- a/app/src/main/res/layout/service_photo_element.xml
+++ b/app/src/main/res/layout/service_photo_element.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:theme="@style/allPages"
+    android:background="@color/mainColorBG"
     tools:context=".fragments.ServicePhotoElement">
 
     <ImageView
