--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -49,8 +49,8 @@
 
                     <ImageView
                         android:id="@+id/avatarProfileImage"
-                        android:layout_width="@dimen/photo_width"
-                        android:layout_height="@dimen/photo_height"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         tools:srcCompat="@tools:sample/avatars" />
                 </LinearLayout>
