--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -24,9 +24,12 @@
 
         <!-- Топ бар -->
         <LinearLayout
+            style="@style/block"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="@drawable/block_text"
+            android:orientation="horizontal"
+            android:padding="5dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -45,6 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
+
                 <Button
                     android:id="@+id/logOutEditProfileBtn"
                     style="@style/smallMainButtonOther"
