--- a/app/src/main/res/drawable/pressed_button.xml
+++ b/app/src/main/res/drawable/pressed_button.xml
@@ -4,25 +4,34 @@
 
     <item android:state_pressed="true" >
         <shape>
-            <gradient
-                android:startColor="@color/activeButton"
-                android:endColor="@color/activeButton"
-                android:angle="270" />
+            <solid android:color="@color/activeButton"/>
             <stroke
                 android:width="3dp"
                 android:color="@color/grey05" />
+            <corners
+                android:radius="8dp" />
+            <padding
+                android:top="5dp"
+                android:bottom="5dp"
+                android:left="5dp"
+                android:right="5dp"/>
         </shape>
     </item>
 
+
     <item>
         <shape>
-            <gradient
-                android:endColor="@color/selectedButton"
-                android:startColor="@color/selectedButton"
-                android:angle="270" />
+            <solid android:color="@color/selectedButton"/>
             <stroke
                 android:width="3dp"
                 android:color="@color/grey05" />
+            <corners
+                android:radius="8dp" />
+            <padding
+                android:top="5dp"
+                android:bottom="5dp"
+                android:left="5dp"
+                android:right="5dp"/>
         </shape>
     </item>
 </selector>
