--- a/app/src/main/res/layout/my_time.xml
+++ b/app/src/main/res/layout/my_time.xml
@@ -18,6 +18,7 @@
 
     <Button
         android:id="@+id/saveMyTimeBtn"
+        style="@style/mainButtonOther"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -27,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/swicherMyTimeLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/swicherMyTimeLayout" />
 
     <LinearLayout
         android:id="@+id/swicherMyTimeLayout"
@@ -39,7 +40,7 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/footerMyTimeLayout"
         app:layout_constraintTop_toBottomOf="@+id/headerMyTimeLayout"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintVertical_bias="0.85" />
 
     <LinearLayout
         android:id="@+id/headerMyTimeLayout"
