--- a/app/src/main/res/layout/swicher_element.xml
+++ b/app/src/main/res/layout/swicher_element.xml
@@ -11,6 +11,7 @@
         android:layout_height="36dp"
         android:background="@drawable/left_transparent_btn"
         android:layout_margin="0dp"
+        android:padding="10dp"
         android:text="left"
         android:textColor="@color/white"/>
 
@@ -21,6 +22,7 @@
         android:layout_height="36dp"
         android:background="@drawable/right_btn"
         android:layout_margin="0dp"
+        android:padding="10dp"
         android:text="right"
         android:textColor="@color/white"/>
 
