--- a/app/src/main/res/layout/subscription_element.xml
+++ b/app/src/main/res/layout/subscription_element.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/subscriptionElementLayout"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/subscriptionElementLayout"
     style="@style/block"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -32,10 +32,23 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:fontFamily="@font/font_awesome_solid"
         android:gravity="center"
+        android:text="@string/subscribe_heart"
+        android:textColor="@color/red"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/unsubscribeSubscriptionElementText"
+        style="@style/textItemRegular"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="@string/subscribe_heart"
         android:textColor="@color/red"
         android:textSize="25sp"
-        android:fontFamily="@font/font_awesome_solid"
-        android:text="@string/subscribe_heart" />
+        android:visibility="gone" />
+
 
 </LinearLayout>
