--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -57,7 +57,7 @@
                 android:id="@+id/progressBarMainScreen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:indeterminateTint= "@color/black"
+                android:indeterminateTint= "@color/panelColor"
                 android:layout_gravity="center"
                 />
         </LinearLayout>
