--- a/app/src/main/res/layout/verify_phone.xml
+++ b/app/src/main/res/layout/verify_phone.xml
@@ -79,7 +79,7 @@
         android:id="@+id/progressBarVerifyCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminateTint= "@color/black"
+        android:indeterminateTint= "@color/white"
         android:layout_gravity="center"
         android:visibility="gone"
         />
