--- a/app/src/main/res/layout/authorization.xml
+++ b/app/src/main/res/layout/authorization.xml
@@ -65,4 +65,13 @@
         android:layout_marginTop="10dp"
         android:layout_gravity="center"/>
 
+    <ProgressBar
+        android:id="@+id/progressBarAuthorization"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint= "@color/white"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        />
+
 </LinearLayout>
