--- a/app/src/main/res/layout/messages.xml
+++ b/app/src/main/res/layout/messages.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:gravity="bottom"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layoutDirection="ltr"/>
     </ScrollView>
 
